--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Mi Web Personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-    <li><a href="/">Portada</a></li>
-    <li><a href="/porfolio/">Porfolio</a></li>
-    <li><a href="/contact/">Contacto</a></li>
-    <li><a href="/about/">Acerca de</a></li>
-</ul>
-    <h2>Contacto</h2>
-        <p>Aquí os dejo mi email y mis redes sociales:</p>
-        <ul>
-            <li><a href="mailto:gustav@gustav.net">Email</a></li>
-            <li><a href="https://github.com/gustavcaves">Github</a></li>
-            <li><a href="https://youtube.com">Youtube</a></li>
-        </ul>
-</body>
-</html>
+{% block title%}Contact{% endblock %} 
+
+{% block background %}{% load static %}{% static 'core/img/contact-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+<h1>Contacto</h1>
+<span class="subheading">Asesoría</span>
+{% endblock %}
+
+
+{% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8 col-md-10 mx-auto">
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur
+                voluptates
+                odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
+                consectetur?
+            </p>
+            <br>
+            <p><b>Teléfono:</b> +09 876 543 210</p>
+            <p><b>Honorarios:</b> 60€/h (precio base)</p>
+        </div>
+    </div>
+</div>
+{% endblock %}
