--- a/webpersonal/core/templates/core/porfolio.html
+++ b/webpersonal/core/templates/core/porfolio.html
@@ -1,20 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Mi Web Personal</h1>
+{% extends 'core/base.html' %}
 
-<ul>
-    <li><a href="/">Portada</a></li>
-    <li><a href="/porfolio/">Porfolio</a></li>
-    <li><a href="/contact/">Contacto</a></li>
-    <li><a href="/about/">Acerca de</a></li>
-</ul>
-    <h2>Porfolio</h2>
-    <p>Aqui estan mis trabajos</p>
-</body>
-</html>
+{% block title%}Porfolio{% endblock %}
+
+{% block background %}{% load static %}{% static 'core/img/portfolio-bg.jpg' %}{% endblock %}
+
+{% block headers %}
+<h1>Portafolio</h1>
+<span class="subheading">Currículo</span>
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="row project">
+        <div class="col-lg-3 col-md-4 offset-lg-1">
+            <img class="img-fluid" src="{% static 'core/img/about-bg.jpg' %}" alt="">
+        </div>
+        <div class="col-lg-7 col-md-8">
+            <h2 class="section-heading title">Segundo Proyecto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet doloribus a, blanditiis dicta esse,
+                architecto nesciunt voluptas provident ullam porro vero officiis necessitatibus consequatur sequi cupiditate
+                ducimus. Maiores, cum sunt.</p>
+            <p><a href="{{project.link}}">Más información</a></p>
+        </div>
+    </div>
+    <div class="row project">
+        <div class="col-lg-3 col-md-4 offset-lg-1">
+            <img class="img-fluid" src="{% static 'core/img/home-bg.jpg' %}" alt="">
+        </div>
+        <div class="col-lg-7 col-md-8">
+            <h2 class="section-heading title">Primer Proyecto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet doloribus a, blanditiis dicta esse,
+                architecto nesciunt voluptas provident ullam porro vero officiis necessitatibus consequatur sequi cupiditate
+                ducimus. Maiores, cum sunt.</p>
+            <p><a href="{{project.link}}">Más información</a></p>
+        </div>
+    </div>
+</div>
+{% endblock %}
