--- a/webpersonal/core/templates/core/home.html
+++ b/webpersonal/core/templates/core/home.html
@@ -6,8 +6,8 @@
 {% block background %}{% load static %}{% static 'core/img/home-bg.jpg' %}{% endblock %}
 
 {% block headers %}
-<h1>Juan Pérez</h1>
-<span class="subheading">Ingeniero Industrial</span>
+<h1>Gustav Caves</h1>
+<span class="subheading">Python and Django Developer</span>
 {% endblock %}
 
 
