--- a/webpersonal/core/templates/core/base.html
+++ b/webpersonal/core/templates/core/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>{% block title %}{% endblock %} | Juan Pérez (Ingeniero)</title>
+  <title>{% block title %}{% endblock %} | Gustav Caves (Python Web Developer)</title>
 
   <!-- Estilos y fuentes del template  -->
 
@@ -25,7 +25,7 @@
   <!-- Navegación -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand" href="{% url 'home' %}">Juan Pérez</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Gustav Caves</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -107,7 +107,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; 2018 · Juan Pérez (Ingeniero Industrial) </p>
+          <p class="copyright text-muted">Copyright &copy; 2021 · Gustav Caves (Python Web Developer) </p>
         </div>
       </div>
     </div>
