--- a/webpersonal/core/templates/core/contact.html
+++ b/webpersonal/core/templates/core/contact.html
@@ -14,10 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur
-                voluptates
-                odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus
-                consectetur?
+            <p>For Contact please send a message to my email on my projects on github.
             </p>
             <br>
             <p><b>Teléfono:</b> +09 876 543 210</p>
